test/errors/error21.vult
fun foo (x, y) {
}

fun bar () {
   val x = foo(1);
}
